Fix nav menu mobile. Some issue with the align items mobile

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -18,6 +18,14 @@
     transition: all 0.3s ease-out;
 }
 
+.btn--outline {
+    background-color: transparent;
+    color:#fff;
+    padding: 8px 20px;
+    border: 1px solid var(--primary);
+    transition: all 0.3s ease-out;
+}
+
 .btn--medium {
     padding: 8px 20px;
     font-size: 20px;
