--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -82,14 +82,17 @@
   
     .nav-menu {
       display: flex;
+      
       flex-direction: column;
       width: 100%;
-      height: 90vh;
+      /*height: 50vh;*/ /*Changed property to min-height*/
+      min-height: 50vh;
       position: absolute;
       top: 80px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
+      justify-content: flex-start; /*Add property*/
     }
   
     .nav-menu.active {
@@ -102,7 +105,7 @@
   
     .nav-links {
       text-align: center;
-      padding: 2rem;
+      padding: 1rem; /*Changed value from 2rem to 1rem*/
       width: 100%;
       display: table;
     }
@@ -138,7 +141,7 @@
     .nav-links-mobile {
       display: block;
       text-align: center;
-      margin: 2rem auto;
+      margin: 1rem auto; /*Changed value from 2rem to 1rem*/
       border-radius: 4px;
       width: 80%;
       text-decoration: none;
